gcc/testsuite/algol68/compile/malformed-mode-2.a68
begin mode Node = struct (int i, Node n); { dg-error "" }
                                          { dg-message "infinite" "" { target *-*-* } .-1 }
      skip
end

